# AmigosConnect

./: README.md  pyproject.toml
amigosConnect/: pyvenv.cfg
amigosConnect/Scripts/: activate  activate.bat
amigos_connect/: app.py  arquivo.py
model/: Calendario.py  Categoria.py  Comentario.py  Connect.py  Curtida.py  Denuncia.py  Enquete.py  Evento.py  Mensagem.py  Opcao.py  Postagem.py  Usuario.py
static/calendar/css/: rome.css
static/calendar/js/: main.js
static/css/: chat.css  landingPage.css  loginCadastro.css  principal.css  termosPoliticas.css  variaveis.css
static/js/: chat.js  configuracoes.js  criar-connect.js  feed.js
templates/: cadastro.html  chat.html  configuracoes.html  criar-connect.html  feed.html  index.html  info-connect.html  login.html  meus-connects.html  participantes.html  politicas.html  termos.html
