[tool.poetry]
name = "amigos-connect"
version = "0.1.0"
description = ""
authors = ["marisa <marisa.mayumi.mo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-session = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
